fix(exam schedule): fix spacing between words in the card note

--- a/src/pages/exam-schedule/exam-schedule.scss
+++ b/src/pages/exam-schedule/exam-schedule.scss
@@ -8,8 +8,5 @@ page-exam-schedule {
         }
       }
     }
-    .note-section p {
-      text-align: justify;
-    }
   }
 }
